--- a/app/styles/base/_variables.css
+++ b/app/styles/base/_variables.css
@@ -1,7 +1,13 @@
 $bright-orange: #ff9900;
 $main-white: #f0f0f0;
 $main-red: #be3144;
+$bg-col: #f5f5f5;
+$text-col: #333;
+$text-col-dark: #222;
+$secondary-col: #bbb;
+$primary-col: #2D4059;
 $main-blue: #45567d;
+$accent-col: #EA5455;
 $main-grey: #303841;
 $coffee-brown: #A0522D;
 $coffee-cup: #F5DEB3;
