--- a/app/styles/modules/_centered-content.css
+++ b/app/styles/modules/_centered-content.css
@@ -1,4 +1,9 @@
 .centered-content {
     position: relative;
     top: -4%;
+    padding: 1rem;
+
+    @mixin atSmall {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 }
