--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1,3 +1,4 @@
+@import './base/_mixins.css';
 @import './base/_variables';
 @import './base/_global';
 @import './modules/_navbar';
@@ -8,6 +9,7 @@
 @import './modules/_footer';
 @import './modules/_social-media';
 @import './modules/_section';
+@import './modules/_mobile-menu.css';
 
 :root {
  
