--- a/app/styles/modules/_section.css
+++ b/app/styles/modules/_section.css
@@ -1,8 +1,13 @@
 .section {
+    min-height: 50vh;
+
+    @mixin atSmall {
+        min-height: 100vh;
+    }
 
     &__title {
         color: $text-col;
-        font-family: "Raleway", sans-serif;
+        font-family: "Roboto", "Raleway", sans-serif;
         margin-bottom: 1rem;
 
         &--underline {
@@ -13,6 +18,23 @@
         &--dark {
             color: $text-col-dark;
         }
+
+        &--portfolio {
+            font-size: 3rem;
+
+            @mixin atSmall {
+                font-size: 4.5rem;
+            }
+        }
+
+        &--about {
+            margin-bottom: 3rem;
+        }
+
+        &--margin-t-large {
+            margin-top: 4rem;
+        }
+
     }
 
     &__subtitle {
@@ -27,12 +49,100 @@
 
         &--small {
             font-size: 2.8rem;
-            padding-top: 1rem; 
+            padding-top: 1rem;
         }
 
         &--coffee {
             color: $coffee-brown;
         }
+
+        &--dark {
+            color: $text-col-dark;
+        }
+
+        &--portfolio {
+            font-size: 2.2rem;
+
+            @mixin atSmall {
+                font-size: 2.6rem;
+            }
+        }
+    }
+
+    &__portfolio-page {
+        max-width: 1200px;
+        padding: 0rem 2rem;
+        min-height: 50vh;
+        display: flex;
+        flex-direction: column;
+
+
+        @mixin atSmall {
+            flex-direction: row;
+            padding: 5rem 2rem;
+        }
+
+        &--col-1 {
+            order: 1;
+            padding-top: 40px;
+
+            @mixin atSmall {
+                width: 40vw;
+                order: 2;
+                padding-top: 80px;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                display: block;
+
+                @mixin atSmall {
+                    display: none;
+                }
+
+            }
+        }
+
+        &--col-2 {
+            order: 2;
+
+            width: 100%;
+            height: auto;
+            margin-right: 5rem;
+            padding-top: 50px;
+
+            @mixin atSmall {
+                order: 1;
+                width: 50vw;
+                height: 70vh;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                display: none;
+
+                @mixin atSmall {
+                    display: block;
+                }
+
+            }
+        }
+    }
+
+    &__projects-about {
+        min-height: 50vh;
+    }
+
+    &__about {
+
+    }
+
+    &__contact {
+        min-height: 20vh;
     }
 
 }
