--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -1,15 +1,15 @@
 @import './base/_mixins.css';
-@import './base/_variables';
-@import './base/_global';
+@import './base/_variables.css';
+@import './base/_global.css';
 @import './modules/_wrapper.css';
-@import './modules/_navbar';
-@import './modules/_welcome-section';
-@import './modules/_centered-content';
-@import './modules/_projects-section';
-@import './modules/_project-tile';
-@import './modules/_footer';
-@import './modules/_social-media';
-@import './modules/_section';
+@import './modules/_navbar.css';
+@import './modules/_welcome-section.css';
+@import './modules/_centered-content.css';
+@import './modules/_projects-section.css';
+@import './modules/_project-tile.css';
+@import './modules/_footer.css';
+@import './modules/_social-media.css';
+@import './modules/_section.css';
 @import './modules/_mobile-menu.css';
 @import './modules/_main-container.css';
 @import './modules/_cta-button.css';
